k8s/testdata/vap/variable4 policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "test-variable-access"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments"]
  variables:
    - name: foo
      expression: "'foo' in object.spec.template.metadata.labels ? url(object.spec.template.metadata.labels['foo']).getQuery() : null"
  validations:
    - expression: variables.foo != null
